--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Explore and Travel</title>
 </head>
@@ -96,9 +95,9 @@
               </div>
           </div>
       </div>
-  </section>
+    </section>
 
-  <section class="content-places">
+    <section class="content-places">
     <div class="container-xl">
         <div class="container-places">
           <div class="places-caption">
@@ -137,10 +136,10 @@
           </div>
         </div>
     </div>
-</section>
+    </section>
 
-<section class="content-dow">
-  <div class="container-xl">
+  <section class="content-dow">
+    <div class="container-xl">
       <div class="container-dow">
             <div class="row">
               <div class="col">
@@ -160,7 +159,134 @@
             <img src="img/illustration-3.png" alt="Photo">
           </div>
       </div>
+    </div>
+  </section>
+
+  <section class="content-feedback">
+    <div class="container-xl">
+      <div class="container-feedback">
+            <div class="row">
+              <div class="col">
+                <h2 class="title-feedback">Testimonials</h2>
+            <div class="feedback">
+              <div class="feedback-stars">
+                <img src="img/svg/star.svg" alt="star" class="feedback-star">
+                <img src="img/svg/star.svg" alt="star" class="feedback-star">
+                <img src="img/svg/star.svg" alt="star" class="feedback-star">
+                <img src="img/svg/star.svg" alt="star" class="feedback-star">
+                <img src="img/svg/star.svg" alt="star" class="feedback-star">
+              </div>   
+            <p class="text-feedback">
+              “Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec”
+            </p>
+          <div class="feedback-user-info">
+            <h3 class="feedback-user-name">Edward Newgate</h3>
+            <p class="feedback-user-hobby">Founder Circle</p>
+          </div>
+            </div>
+          </div>
+          <div class="col col-photo-feedback">
+            <img src="img/photo-user.jpg" alt="Photo">
+          </div>
+        </div> 
+      </div>
+    </div>
+  </section>
+
+  <section class="content-stories">
+    <div class="container-xl">
+        <div class="container-stories">
+          <div class="stories-caption">
+              <h2 class="stories-title">Trending stories</h2>
+              <a href="#" class="stories-view-all">View all</a>
+          </div>
+          <div class="stories-cards">
+            <figure class="stories-card">
+              <img src="img/story-1.jpg" alt="story">
+              <figcaption class="story-desc">
+              <h3 class="stories-card-name">The many benefits of taking a healing holiday</h3>
+              <p class="stories-card-country">‘Helaing holidays’ are on the rise tohelp maximise your health and happines...</p>
+              <a class="stories-card-read-more" href="#">Read more</a>
+            </figcaption>
+            </figure>
+            <figure class="stories-card">
+              <img src="img/story-2.jpg" alt="story">
+              <figcaption class="story-desc">
+              <h3 class="stories-card-name">The many benefits of taking a healing holiday</h3>
+              <p class="stories-card-country">‘Helaing holidays’ are on the rise tohelp maximise your health and happines...</p>
+              <a class="stories-card-read-more">Read more</a>
+            </figcaption>
+            </figure>
+            <figure class="stories-card">
+              <img src="img/story-3.jpg" alt="story">
+              <figcaption class="story-desc">
+              <h3 class="stories-card-name">The many benefits of taking a healing holiday</h3>
+              <p class="stories-card-country">‘Helaing holidays’ are on the rise tohelp maximise your health and happines...</p>
+              <a class="stories-card-read-more">Read more</a>
+            </figcaption>
+            </figure>
+            <figure class="stories-card">
+              <img src="img/story-4.jpg" alt="story">
+              <figcaption class="story-desc">
+              <h3 class="stories-card-name">The many benefits of taking a healing holiday</h3>
+              <p class="stories-card-country">‘Helaing holidays’ are on the rise tohelp maximise your health and happines...</p>
+              <a class="stories-card-read-more">Read more</a>
+            </figcaption>
+            </figure>
+          </div>
+        </div>
+    </div>
+  </section>
+
+  <footer class="content-footer">
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-xl">
+          <div class="footer-flex-box">
+          <div class="footer-info">
+            <img src="img/svg/logo.svg" alt="logo" class="footer-logo">
+            <p class="footer-text">Plan and book your perfect trip with expert advice, travel tips destination information from us</p>
+            <p class="footer-company">©2020 Thousand Sunny. All rights reserved</p>
+          </div>
+          <div class="lists">
+          <div class="destinations">
+            <h3 class="list-header">Destinations</h3>
+            <ul class="destinations-list">
+              <li class="destinations-item">Africa</li>
+              <li class="destinations-item">Antarctica</li>
+              <li class="destinations-item">Asia</li>
+              <li class="destinations-item">Europe</li>
+              <li class="destinations-item">America</li>
+            </ul>
+          </div>
+          <div class="shop">
+            <h3 class="list-header">Shop</h3>
+            <ul class="shop-list">
+              <li class="shop-item">Africa</li>            
+              <li class="shop-item">Antarctica</li>
+              <li class="shop-item">Asia</li>
+              <li class="shop-item">Europe</li>
+              <li class="shop-item">America</li>
+            </ul>
+          </div>
+          <div class="interests">
+            <h3 class="list-header">Interests</h3>
+            <ul class="interests-list">
+              <li class="interests-item">Africa</li>
+              <li class="interests-item">Antarctica</li>
+              <li class="interests-item">Asia</li>
+              <li class="interests-item">Europe</li>
+              <li class="interests-item">America</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </nav>
   </div>
-</section>
+  </footer>
 </body>
 </html>
